Move gnocchi notification controller to gnocchi package.